--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DnB Santa Creates Personal Video Messages of Kindness</title>
+    <meta name="description" content="DnB Santa - Free personalized Christmas videos from Santa with a DnB twist! Magic Circle quality, always free." />
+    <meta name="keywords" content="Santa video, Christmas, personalized, free, DnB Santa, Chris P Tee" />
+    <title>DnB Santa - Free Personalized Christmas Videos</title>
   </head>
   <body>
     <div id="root"></div>
